fix labels overlapping, object dropdown

--- a/src/app/focus-context-test/focus-child/focus-child.component.scss
+++ b/src/app/focus-context-test/focus-child/focus-child.component.scss
@@ -19,22 +19,23 @@ app-focus-child {
   .inputs{
     display: flex;
     margin-bottom: 10px;
-    justify-content: space-between;
-    // .annotation-button{
-    //   margin-right: 10px;
-    // }
-    // .done-button{
-    //   margin-right: 10px;
-    // }
-    // .save-button{
-    //   margin-right: 10px;
+    justify-content: flex-start;
+    .annotation-button{
+      margin-right: 10px;
+    }
+    .done-button{
+      margin-right: 10px;
+    }
+    .save-button{
+      margin-right: 10px;
       
-    // }
-    // .delete-button{
-    //   margin-right: 30px;
-    // }
+    }
+    .delete-button{
+      margin-right: 20px;
+    }
     .themesDropDown{
-      margin-left: 30px;
+      margin-left: 20px;
+      margin-right: 10px;
     }
     // .theme-field{
     //   margin-left: 30px;
